--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,19 +37,19 @@
 <div class="bar-chart">
   <div class="icon-bar-container">
     <img src="https://www.svgrepo.com/show/512317/github-142.svg" alt="GitHub" class="icon"/>
-    <a href="https://github.com/richmulvany" class="bar github">GitHub</a>
+    <a href="https://github.com/richmulvany" class="bar github"><span>GitHub</span></a>
   </div>
   <div class="icon-bar-container">
     <img src="https://www.svgrepo.com/show/922/linkedin.svg" alt="LinkedIn" class="icon"/>
-    <a href="https://linkedin.com/in/richmulvany" class="bar linkedin">LinkedIn</a>
+    <a href="https://linkedin.com/in/richmulvany" class="bar linkedin"><Span>LinkedIn</Span></a>
   </div>
   <div class="icon-bar-container">
     <img src="https://www.svgrepo.com/show/330611/hashnode.svg" alt="Hashnode" class="icon"/>
-    <a href="https://hashnode.com/@richmulvany" class="bar hashnode">Hashnode</a>
+    <a href="https://hashnode.com/@richmulvany" class="bar hashnode"><Span>Hashnode</Span></a>
   </div>
   <div class="icon-bar-container">
     <img src="https://www.svgrepo.com/show/502648/email.svg" alt="Email" class="icon"/>
-    <a href="mailto:richard.mulvany@hotmail.co.uk" class="bar email">Email</a>
+    <a href="mailto:richard.mulvany@hotmail.co.uk" class="bar email"><Span>Email</Span></a>
   </div>
 </div>
         <!-- Barchart links attempt end -->
