--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,11 @@
         <!-- Blog Posts Section -->
         <div id="blog-posts">
         <!-- Dynamically loaded blog posts will go here -->
+           <div class="blog-post">
+            <a href="https://richmulvany.hashnode.dev/how-i-made-a-simple-portfolio-website-using-github-pages">
+              <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1708892762500/4ff70b42-41c6-4251-8ddd-e853246a0fff.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" alt="How I Made a Simple Portfolio Website Using GitHub Pages">
+            </a>
+          </div>
           <div class="blog-post">
             <a href="https://richmulvany.hashnode.dev/exploring-global-female-literacy-and-infant-mortality-rates">
               <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1708609112033/c0e5c2d7-4e2b-46d2-a637-8960b0dd38e9.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" alt="Exploring Global Female Literacy and Infant Mortality Rates">
