--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,6 +71,11 @@
         <div id="blog-posts">
         <!-- Dynamically loaded blog posts will go here -->
            <div class="blog-post">
+            <a href="https://github.com/richmulvany/deej">
+              <img src="https://i.imgur.com/OV0F0tI.png" alt="Making a sound mixer using deej with an arduino">
+            </a>
+          </div>
+           <div class="blog-post">
             <a href="https://richmulvany.hashnode.dev/how-i-made-a-simple-portfolio-website-using-github-pages">
               <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1708892762500/4ff70b42-41c6-4251-8ddd-e853246a0fff.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" alt="How I Made a Simple Portfolio Website Using GitHub Pages">
             </a>
