--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,6 +71,11 @@
         <div id="blog-posts">
         <!-- Dynamically loaded blog posts will go here -->
            <div class="blog-post">
+            <a href="https://github.com/richmulvany/humidity_sensor">
+              <img src="https://i.imgur.com/tVmPvr1.png" alt="Making a bedroom humidity sensor">
+            </a>
+          </div>
+           <div class="blog-post">
             <a href="https://github.com/richmulvany/deej">
               <img src="https://i.imgur.com/OV0F0tI.png" alt="Making a sound mixer using deej with an arduino">
             </a>
