--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,17 +70,22 @@
         <!-- Blog Posts Section -->
         <div id="blog-posts">
         <!-- Dynamically loaded blog posts will go here -->
-           <div class="blog-post">
+          <div class="blog-post">
+            <a href="https://richmulvany.hashnode.dev/predicting-hospital-los">
+              <img src="https://imgur.com/P5VghF8" alt="What I've Been Up To">
+            </a>
+          </div>
+          <div class="blog-post">
             <a href="https://github.com/richmulvany/humidity_sensor">
               <img src="https://i.imgur.com/tVmPvr1.png" alt="Making a bedroom humidity sensor">
             </a>
           </div>
-           <div class="blog-post">
+          <div class="blog-post">
             <a href="https://github.com/richmulvany/deej">
               <img src="https://i.imgur.com/OV0F0tI.png" alt="Making a sound mixer using deej with an arduino">
             </a>
           </div>
-           <div class="blog-post">
+          <div class="blog-post">
             <a href="https://richmulvany.hashnode.dev/how-i-made-a-simple-portfolio-website-using-github-pages">
               <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1708892762500/4ff70b42-41c6-4251-8ddd-e853246a0fff.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" alt="How I Made a Simple Portfolio Website Using GitHub Pages">
             </a>
