--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
         <!-- Dynamically loaded blog posts will go here -->
           <div class="blog-post">
             <a href="https://richmulvany.hashnode.dev/predicting-hospital-los">
-              <img src="https://imgur.com/P5VghF8" alt="What I've Been Up To">
+              <img src="https://i.imgur.com/P5VghF8.png" alt="What I've Been Up To">
             </a>
           </div>
           <div class="blog-post">
