--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -143,34 +143,38 @@ a {
 
 @keyframes growAndSettleGithub {
   0% { width: 0%; }
-  50% { width: 120%; }
-  70% { width: 110%; }
-  90% { width: 125%; }
+  20% { width: 26%; }
+  40% { width: 52%; }
+  60% { width: 78%; }
+  80% { width: 104%; }
   100% { width: 130%; }
 }
 
 @keyframes growAndSettleLinkedin {
   0% { width: 0%; }
-  50% { width: 110%; }
-  70% { width: 80%; }
-  90% { width: 95%; }
-  100% { width: 90%; }
+  20% { width: 22%; }
+  40% { width: 44%; }
+  60% { width: 66%; }
+  80% { width: 88; }
+  100% { width: 110%; }
 }
 
 @keyframes growAndSettleHashnode {
   0% { width: 0%; }
-  50% { width: 130%; }
-  70% { width: 115%; }
-  90% { width: 140%; }
+  20% { width: 30%; }
+  40% { width: 60%; }
+  60% { width: 80%; }
+  80% { width: 120; }
   100% { width: 150%; }
 }
 
 @keyframes growAndSettleEmail {
   0% { width: 0%; }
-  50% { width: 100%; }
-  70% { width: 65%; }
-  90% { width: 80%; }
-  100% { width: 85%; }
+  20% { width: 20%; }
+  40% { width: 40%; }
+  60% { width: 60%; }
+  80% { width: 80; }
+  100% { width: 100%; }
 }
 
 .bar-chart {
