--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -141,40 +141,33 @@ a {
   border-color: #2E8B57; /* Pine green border on hover */
 }
 
-@keyframes growAndSettleGithub {
-  0% { width: 0%; }
-  20% { width: 26%; }
-  40% { width: 52%; }
-  60% { width: 78%; }
-  80% { width: 104%; }
-  100% { width: 130%; }
+@keyframes smoothGrow {
+  from { width: 0%; }
+  to   { width: 100%; }
 }
 
-@keyframes growAndSettleLinkedin {
-  0% { width: 0%; }
-  20% { width: 22%; }
-  40% { width: 44%; }
-  60% { width: 66%; }
-  80% { width: 88; }
-  100% { width: 110%; }
+.github {
+  animation: smoothGrow 1.5s ease-out forwards;
+  width: 130%; /* final width target */
+  animation-delay: 0s;
 }
 
-@keyframes growAndSettleHashnode {
-  0% { width: 0%; }
-  20% { width: 30%; }
-  40% { width: 60%; }
-  60% { width: 80%; }
-  80% { width: 120; }
-  100% { width: 150%; }
+.linkedin {
+  animation: smoothGrow 1.5s ease-out forwards;
+  width: 110%;
+  animation-delay: 0.1s;
 }
 
-@keyframes growAndSettleEmail {
-  0% { width: 0%; }
-  20% { width: 20%; }
-  40% { width: 40%; }
-  60% { width: 60%; }
-  80% { width: 80; }
-  100% { width: 100%; }
+.hashnode {
+  animation: smoothGrow 1.5s ease-out forwards;
+  width: 150%;
+  animation-delay: 0.2s;
+}
+
+.email {
+  animation: smoothGrow 1.5s ease-out forwards;
+  width: 100%;
+  animation-delay: 0.3s;
 }
 
 .bar-chart {
