--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -143,22 +143,22 @@ a {
 // Bar Growth Animations
 @keyframes growAndSettleGithub {
   from { width: 0%; }
-  to   { width: 130%; }
+  to   { width: 90%; }
 }
 
 @keyframes growAndSettleLinkedin {
   from { width: 0%; }
-  to   { width: 110%; }
+  to   { width: 75%; }
 }
 
 @keyframes growAndSettleHashnode {
   from { width: 0%; }
-  to   { width: 150%; }
+  to   { width: 100%; }
 }
 
 @keyframes growAndSettleEmail {
   from { width: 0%; }
-  to   { width: 100%; }
+  to   { width: 65%; }
 }
 
 // Bar Chart Section
@@ -179,6 +179,7 @@ a {
   align-items: center;
   background-color: #e0e0e0;
   color: white;
+  height: 32px;
   padding: 10px;
   border-radius: 5px;
   text-decoration: none;
