--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -166,6 +166,7 @@ a {
   display: flex;
   align-items: center;
   gap: 10px; // Adjust space between icon and bar
+  margin-bottom: 10px;
 }
 
 .icon {
