--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,7 @@ a {
   border: 1px solid #2E8B57;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   display: block;
+  margin-left: 20px;
   margin-bottom: 20px;
 }
 
